[package]
name = "spooks"
version = "0.2.6"
authors = ["Niklas R. <niklasr@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Spook in Rust."
keywords = ["random"]
repository = "https://github.com/montao/spooks"
readme = "README.md"

[dependencies]
getopts = "0.2"
rand = "0.8"
easy_reader = "0.5.0"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "montao/spooks" }
